crates/jolt_java_syntax/tests/snapshots/corpus__style__statements__empty_method_block.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
class Example {
  void run() { }
}

syntax:
syntax:
CompilationUnit
  ImportDeclarationList
  CompilationUnitDeclarationList
    ClassDeclaration
      ClassKw "class" @ 0..5 trailing=[Whitespace " "]
      Identifier "Example" @ 6..13 trailing=[Whitespace " "]
      ClassBody
        LBrace "{" @ 14..15
        ClassBodyMemberList
          ClassBodyDeclaration
            MethodDeclaration
              VoidType
                VoidKw "void" @ 18..22 leading=[Newline "\n", Whitespace "  "] trailing=[Whitespace " "]
              Identifier "run" @ 23..26
              LParen "(" @ 26..27
              RParen ")" @ 27..28 trailing=[Whitespace " "]
              Block
                LBrace "{" @ 29..30 trailing=[Whitespace " "]
                BlockStatementList
                RBrace "}" @ 31..32
        RBrace "}" @ 33..34 leading=[Newline "\n"]
  Eof "" @ 35..35 leading=[Newline "\n"]

diagnostics:
  (none)

diagnostics:
(none)
